--- a/index.html
+++ b/index.html
@@ -5,23 +5,62 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
-		.container {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			height: 100vh;
+		/* 전체 페이지 스타일 */
+		body {
+			margin: 0;
+			padding: 0;
 			font-family: Arial, Helvetica, sans-serif;
+			background-color: #f5f5f5;
+		}
+
+		/* 페이지 타이틀 스타일 */
+		.page-title {
+			background-color: #4caf50;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+			font-size: 36px;
+			margin: 0;
+		}
+
+		/* 내용 컨테이너 스타일 */
+		.content-container {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+			background-color: #fff;
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+			border-radius: 5px;
+			margin-top: 50px;
+		}
+
+		/* 문단 스타일 */
+		p {
+			line-height: 1.5;
+			font-size: 18px;
+			margin: 20px 0;
+		}
+
+		/* 링크 스타일 */
+		a {
+			color: #4caf50;
+			text-decoration: none;
+		}
+
+		/* 링크 마우스 호버 스타일 */
+		a:hover {
+			text-decoration: underline;
 		}
 	</style>
 </head>
 <body>
-	<div class="container">
-		<h1>Neural Network</h1>
+	<div class="page-title">Neural Network</div>
+	<div class="content-container">
 		<p>Neural network은 생물학적인 뉴런의 작동 원리를 모방한 인공 신경망입니다.</p>
 		<p>인공 신경망은 입력층, 은닉층, 출력층으로 구성되어 있으며, 각 층에는 여러 개의 뉴런이 있습니다.</p>
 		<p>입력층에서는 외부 정보를 받아들이고, 은닉층에서는 입력 정보를 처리합니다.</p>
 		<p>출력층에서는 최종 결과를 출력하며, 이 결과는 학습을 통해 조정됩니다.</p>
+		<p>더 자세한 정보는 <a href="#">여기</a>에서 확인하실 수 있습니다.</p>
 	</div>
 </body>
 </html>
