--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<p>인공 신경망은 입력층, 은닉층, 출력층으로 구성되어 있으며, 각 층에는 여러 개의 뉴런이 있습니다.</p>
 		<p>입력층에서는 외부 정보를 받아들이고, 은닉층에서는 입력 정보를 처리합니다.</p>
 		<p>출력층에서는 최종 결과를 출력하며, 이 결과는 학습을 통해 조정됩니다.</p>
-		<p>더 자세한 정보는 <a href="#">여기</a>에서 확인하실 수 있습니다.</p>
+		<p>더 자세한 정보는 <a href="https://www.youtube.com/watch?v=aircAruvnKk">여기</a>에서 확인하실 수 있습니다.</p>
 	</div>
 </body>
 </html>
