--- a/index.html
+++ b/index.html
@@ -51,16 +51,47 @@
 		a:hover {
 			text-decoration: underline;
 		}
+
+		/* 메뉴 스타일 */
+		.menu {
+			display: flex;
+			justify-content: center;
+			background-color: #fff;
+			padding: 10px;
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		}
+
+		/* 메뉴 링크 스타일 */
+		.menu a {
+			color: #4caf50;
+			margin: 0 10px;
+			font-weight: bold;
+		}
+
+		/* 메뉴 링크 마우스 호버 스타일 */
+		.menu a:hover {
+			text-decoration: underline;
+		}
 	</style>
 </head>
 <body>
+	<div class="menu">
+		<a href="#">Home</a>
+		<a href="#">About</a>
+		<a href="#">Contact</a>
+	</div>
 	<div class="page-title">Neural Network</div>
 	<div class="content-container">
 		<p>Neural network은 생물학적인 뉴런의 작동 원리를 모방한 인공 신경망입니다.</p>
 		<p>인공 신경망은 입력층, 은닉층, 출력층으로 구성되어 있으며, 각 층에는 여러 개의 뉴런이 있습니다.</p>
-		<p>입력층에서는 외부 정보를 받아들이고, 은닉층에서는 입력 정보를 처리합니다.</p>
+		<p>입력층에서는 외부 정보를 받아들이고, 은닉층에서는 입력 정보를 처리합니다.</p
 		<p>출력층에서는 최종 결과를 출력하며, 이 결과는 학습을 통해 조정됩니다.</p>
-		<p>더 자세한 정보는 <a href="https://www.youtube.com/watch?v=aircAruvnKk">여기</a>에서 확인하실 수 있습니다.</p>
+		<p>더 자세한 내용은 아래 링크를 참조해 주세요.</p>
+		<ul>
+			<li><a href="#">Neural Network의 구조</a></li>
+			<li><a href="#">Neural Network의 학습</a></li>
+			<li><a href="#">Neural Network의 활용</a></li>
+		</ul>
 	</div>
 </body>
 </html>
