--- a/index.html
+++ b/index.html
@@ -72,26 +72,85 @@
 		.menu a:hover {
 			text-decoration: underline;
 		}
+
+		/* 버튼 스타일 */
+		.button {
+			display: inline-block;
+			background-color: #4caf50;
+			color: #fff;
+			padding: 10px 20px;
+			border: none;
+			border-radius: 5px;
+			font-size: 18px;
+			cursor: pointer;
+			margin-top: 20px;
+		}
+
+		/* 버튼 호버 스타일 */
+		.button:hover {
+			background-color: #3e8e41;
+		}
 	</style>
 </head>
 <body>
 	<div class="menu">
 		<a href="#">Home</a>
-		<a href="#">About</a>
-		<a href="#">Contact</a>
+		<a href="#about">About</a>
+		<a href="#contact">Contact</a>
 	</div>
 	<div class="page-title">Neural Network</div>
 	<div class="content-container">
+		<h2>What is Neural Network?</h2>
+		<p>Neural network is a biologically inspired artificial neural network that mimics the working principles of neurons in the brain.</p>
+		<p>It is composed of input, hidden, and output layers, and each layer consists of multiple neurons.</p>
+		<p>In the input layer, external information is received, and in the hidden layer, the input information is processed.</p>
+		<p>In the output layer, the final result is output, and this result is adjusted through learning.</p>
+		<p>For more information, please check out the <a href="#about">About page</a>.</p>
+
+		<h2>Neural Network Example</h2>
+		<p>Press the button below to train a neural network.</p>
+		<button class="button">Start Training</button>
+
+		<h2>Neural Network Structure</h2>
+		<p>The structure of a neural network can vary depending on its purpose, but the basic structure consists of input, hidden, and output layers.</p>
+		<p>The number of neurons in each layer can also vary depending on the complexity of the problem being solved.</p>
+		<p>For more information on the structure of a neural network, please visit the <a href="https://en.wikipedia.org/wiki/Artificial_neural_network#Structure">Wikipedia page</a>.</p>
+
+		<h2>Neural Network Training</h2>
+		<p>Neural network training involves adjusting the weights and biases of the neurons to minimize the error between the predicted output and the actual output.</p>
+		<p>The most common training method is backpropagation, which involves propagating the error backwards through the network and adjusting the weights and biases accordingly.</p>
+		<p>For more information on neural network training, please visit the <a href="https://en.wikipedia.org/wiki/Backpropagation">Wikipedia page</a>.</p>
+
+		<h2>Neural Network Applications</h2>
+		<p>Neural networks are widely used in various fields such as image recognition, natural language processing, speech recognition, and recommendation systems.</p>
+		<p>For more information on neural network applications, please visit the <a href="https://en.wikipedia.org/wiki/Artificial_neural_network#Applications">Wikipedia page</a>.</p>
+
+	</div>
+
+	<div id="about" class="content-container">
+		<h2>About Neural Network</h2>
 		<p>Neural network은 생물학적인 뉴런의 작동 원리를 모방한 인공 신경망입니다.</p>
 		<p>인공 신경망은 입력층, 은닉층, 출력층으로 구성되어 있으며, 각 층에는 여러 개의 뉴런이 있습니다.</p>
-		<p>입력층에서는 외부 정보를 받아들이고, 은닉층에서는 입력 정보를 처리합니다.</p
+		<p>입력층에서는 외부 정보를 받아들이고, 은닉층에서는 입력 정보를 처리합니다.</p>
 		<p>출력층에서는 최종 결과를 출력하며, 이 결과는 학습을 통해 조정됩니다.</p>
-		<p>더 자세한 내용은 아래 링크를 참조해 주세요.</p>
-		<ul>
-			<li><a href="#">Neural Network의 구조</a></li>
-			<li><a href="#">Neural Network의 학습</a></li>
-			<li><a href="#">Neural Network의 활용</a></li>
-		</ul>
+				<p>For more information on neural network applications, please visit the <a href="#contact">Contact page</a>.</p>
+	</div>
+
+	<div id="contact" class="content-container">
+		<h2>Contact Us</h2>
+		<p>For any inquiries or feedback, please feel free to contact us using the form below.</p>
+		<form action="#" method="POST">
+			<label for="name">Name:</label>
+			<input type="text" id="name" name="name" required>
+
+			<label for="email">Email:</label>
+			<input type="email" id="email" name="email" required>
+
+			<label for="message">Message:</label>
+			<textarea id="message" name="message" required></textarea>
+
+			<button type="submit" class="button">Send</button>
+		</form>
 	</div>
 </body>
 </html>
